# Tollgate-Recurring-Subscription-Payments-on-Stellar

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  README.md  extract.py  extract_interface.py  fix_all.py  fix_dev.py  update_billing.py  update_contracts.py
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml
contracts/billing/: Cargo.toml
contracts/billing/src/: lib.rs  subscription_client.rs  test.rs
contracts/subscription/: Cargo.toml
contracts/subscription-interface/: Cargo.toml
contracts/subscription-interface/src/: lib.rs
contracts/subscription/src/: lib.rs  test.rs
frontend/: .env.example  .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ActivityFeed.jsx  Banner.jsx  BillingSweepPanel.jsx  CardSkeleton.jsx  CreatePlanForm.jsx  GateArm.jsx  Header.jsx  Hero.jsx  NextChargeCountdown.jsx  PlanCard.jsx  SubscriptionCard.jsx
frontend/src/hooks/: useCountdown.js  useEventStream.js  useTokenBalance.js  useWallet.js
frontend/src/lib/: config.js  events.js  formatEvent.js  sorobanClient.js  subscriptionActions.js  wallet.js
frontend/src/test/: GateArm.test.jsx  formatEvent.test.js  useCountdown.test.jsx
